[project]
name = "nonebot-plugin-params"
version = "0.1.1"
description = "提供协议适配时常用的注入函数"
authors = [
    {name = "iyume", email = "iyumelive@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "nonebot2>=2.3.0",
    "typing-extensions>=4.5.0",
]
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/iyume/nonebot-plugin-params"
repository = "https://github.com/iyume/nonebot-plugin-params"

[tool]
[tool.pdm]
editable-backend = "editables"

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.4",
    "nonebot2[fastapi,uvicorn,httpx,websockets]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.3",
    "nonebot-adapter-feishu>=2.6.1",
    "nonebot-adapter-telegram>=0.1.0b17",
    "nonebot-adapter-qq>=1.4.4",
    # nonebot-adapter-ding still alpha,
    # nonebot-adapter-kaiheila
]

[tool.black]
line-length = 92
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 92
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]

line-length = 92
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037", "W291"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
defineConstant = { PYDANTIC_V2 = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
